[gd_scene load_steps=8 format=3 uid="uid://vrr3awe2cqt3"]

[ext_resource type="Script" path="res://Scripts/BossLogic.gd" id="1_80p70"]
[ext_resource type="Texture2D" uid="uid://chj8puid674nr" path="res://Assets/Sprites/table/spr_table_red_pastel.png" id="2_0nr1x"]
[ext_resource type="PackedScene" uid="uid://dyux3oh0sotah" path="res://card_deck/deck.tscn" id="2_orwuw"]
[ext_resource type="PackedScene" uid="uid://c71lhcqy8hqru" path="res://player/player.tscn" id="3_usixx"]
[ext_resource type="PackedScene" uid="uid://c63m8tfiigc3" path="res://Scenes/HUD.tscn" id="4_ly04a"]
[ext_resource type="PackedScene" uid="uid://1tukfv0nnmly" path="res://Scenes/Abilities.tscn" id="5_f21at"]
[ext_resource type="PackedScene" uid="uid://dpifh77h8jhn3" path="res://Scenes/dealer.tscn" id="6_x84xn"]

[node name="Mute" type="Node2D"]
script = ExtResource("1_80p70")

[node name="Table" type="Sprite2D" parent="."]
position = Vector2(575.5, 322.5)
scale = Vector2(1.01476, 1.03241)
texture = ExtResource("2_0nr1x")

[node name="Deck" parent="." instance=ExtResource("2_orwuw")]

[node name="Player" parent="." instance=ExtResource("3_usixx")]
position = Vector2(537, 254)

[node name="HUD" parent="." instance=ExtResource("4_ly04a")]

[node name="AbilityManager" parent="." instance=ExtResource("5_f21at")]

[node name="Dealer" parent="." instance=ExtResource("6_x84xn")]

[connection signal="round_over_main" from="." to="." method="_on_round_over_main"]
